# koreader-sync-rs

./: Cargo.toml  Dockerfile  README.md
migrations/: 20250511212923_init.down.sql  20250511212923_init.up.sql
src/: main.rs
src/api/: healthcheck.rs  mod.rs
src/api/syncs/: get_progress.rs  mod.rs  update_progress.rs
src/api/users/: auth.rs  create.rs  mod.rs
src/db/: mod.rs  postgres.rs
