[package]
name = "koreader-sync-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono" ] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17.0"